# Hikari

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Report.md.html
ext/embree/: embree-config.cmake
ext/embree/lib/: embree3.lib
ext/embree/tbb/cmake/: TBBConfig.cmake  TBBConfigVersion.cmake
ext/embree/tbb/lib/ia32/vc14/: tbb.def  tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbbind.lib  tbbbind_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
ext/embree/tbb/lib/ia32/vc14_uwp/: tbb.def  tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.def  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
ext/embree/tbb/lib/intel64/vc14/: tbb.def  tbb_preview_debug.lib  tbbbind_debug.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy_debug.lib
ext/embree/tbb/lib/intel64/vc14_uwp/: tbb.def  tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.def  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
src/: AABB.cpp  AABB.h  App.cpp  App.h  BSDF.h  BlockGenerator.cpp  BlockGenerator.h  Box.cpp  Box.h  BxDF.cpp  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  EmbreeGeometry.h  EmbreeRTEngine.cpp  EmbreeRTEngine.h  EmbreeScene.cpp  EmbreeScene.h  EmbreeSphere.cpp  EmbreeTriangleMesh.cpp  Filter.h  Gaussian.cpp  Gaussian.h  ImageBlock.cpp  ImageBlock.h  Integrator.h  Interaction.cpp  Interaction.h  Light.h  Main.cpp  Material.h  Memory.cpp  Memory.h  Mitchell.cpp  Mitchell.h  ObjLoader.cpp  ObjLoader.h  PathIntegrator.cpp  PathIntegrator.h  (+35 more)
src/BxDFs/: Lambertian.h  OrenNayar.cpp  OrenNayar.h
src/Core/: BSDF.cpp  BSDF.h  BxDF.cpp  BxDF.h  Camera.cpp  Camera.h  Integrator.cpp  Integrator.h  Interaction.cpp  Interaction.h  Light.cpp  Light.h  Material.h  Primitive.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  Shape.h
src/Integrators/: DirectLighting.cpp  DirectLighting.h  Path.cpp  Path.h  Whitted.cpp  Whitted.h
src/Lights/: Diffuse.cpp  Diffuse.h  Directional.cpp  Directional.h  Point.cpp  Point.h  Spot.cpp  Spot.h
src/Materials/: Matte.cpp  Matte.h
src/Math/: Constants.h  Ray.h  Transform.cpp  Transform.h  Utility.cpp  Utility.h
src/Shapes/: Sphere.cpp  Sphere.h  TriangleMesh.cpp  TriangleMesh.h
src/Textures/: Constant.h
